--- a/src/styles/Text.scss
+++ b/src/styles/Text.scss
@@ -1,3 +1,3 @@
 @import "./Colors.scss";
 
-$font: "Helvetica Neue", "Open Sans", Helvetica, Arial, sans-serif;
+$font: "Roboto", Helvetica, Arial, sans-serif;
